--- a/src/css/general.css
+++ b/src/css/general.css
@@ -26,6 +26,7 @@
     --g-15: 15px;
     --g-20: 20px;
 
+    --p-5: 5px;
     --p-8: 8px;
     --p-10: 10px;
     --p-15: 15px;
@@ -137,7 +138,7 @@ p { line-height: 1.6; }
         cursor: pointer;
         text-decoration: none;
         color: var(--fg-1);
-        padding: calc(var(--p-8) - 1px) var(--p-15);
+        padding: var(--p-8) var(--p-15);
         outline: var(--border-solid-3);
         background: linear-gradient(To bottom, var(--bg-1) 40%, var(--bg-3) 100%);
 
@@ -145,6 +146,11 @@ p { line-height: 1.6; }
 
         &:hover { opacity: 0.8; }
     }
+}
+
+.btn-active {
+    background-image: url('/Lines.svg') !important;
+    background-size: 100px !important;
 }
 
 .float-svg {
