--- a/src/css/home.css
+++ b/src/css/home.css
@@ -187,7 +187,22 @@ header {
 }
 
 @media (max-width: 900px) {
-    .image-about {
-        display: none;
+    header .title {
+        letter-spacing: -5px !important;
+    }
+}
+
+
+@media (max-width: 600px) {
+    nav {
+        .ul-brand { display: none; }
+        .ul-links {
+            width: 100%;
+            a { 
+                width: 100%;
+                display: flex;
+                justify-content: center;
+            }
+        }
     }
 }
