--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -120,3 +120,15 @@
 @media (max-width: 900px) {
     .about, .experience, .service, .projects { grid-template-columns: 1fr; }
 }
+
+@media (max-width: 700px) {
+    form {
+        display: flex !important;
+        flex-wrap: wrap !important;
+
+        .cont-name { 
+            width: 100%;
+            input { width: 100%; }
+        }
+    }
+}
