--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -304,9 +304,9 @@
     right: 10px;
     width: 15px;
     height: 15px;
-    border-radius: 50%;
+    border-radius: var(--rd-4);
     background-color: var(--bg-1);
-    border: 2px solid var(--br-2);
+    outline: 1px solid var(--br-1);
     z-index: 10;
 }
 
@@ -320,6 +320,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;
+    transition: 300ms;
 
     .skill {
         position: absolute;
@@ -446,6 +447,7 @@
         background-color: transparent;
         top: 0;
         right: 0;
+        border: none;
         border: none;
 
         .float-skill-ring {
