--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -18,7 +18,7 @@
         transform: translateX(-50%);
         width: 100%;
         height: 100%;
-        background-image: url('/6.png');
+        background-image: url('/6.webp');
         background-size: 100%;
         -webkit-mask-image: linear-gradient(To top, var(--bg-1), transparent);
         mask-image: linear-gradient(To top, var(--bg-1), transparent);
