--- a/src/css/general.css
+++ b/src/css/general.css
@@ -1,18 +1,20 @@
-:root {
-    --bg-1: #020607;
-    --bg-2: #0f0f0f;
-    --bg-3: #101618ad;
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 
-    --br-1: #161a1c;
-    --br-2: #1c2123;
-    --br-3: #272d30;
+:root {
+    --bg-1: #000000;
+    --bg-2: #090909;
+    --bg-3: #141414;
+
+    --br-1: #141419;
+    --br-2: #181a1e;
+    --br-3: #272930;
 
     --fg-1: #e8e8e8;
-    --fg-2: #828f92;
-    --fg-3: #3f484a;
-    --fg-4: #a0b0b4;
+    --fg-2: #959595;
+    --fg-3: #3f424a;
+    --fg-4: #c3ff4a;
 
-    --bg-bl-li-1: #81f0ff0f;
+    --bg-bl-li-1: #4699ff0c;
 
     --rd-4: 4px;
     --rd-6: 6px;
@@ -25,12 +27,14 @@
     --g-10: 10px;
     --g-15: 15px;
     --g-20: 20px;
+    --g-25: 25px;
 
     --p-5: 5px;
     --p-8: 8px;
     --p-10: 10px;
     --p-15: 15px;
     --p-20: 20px;
+    --p-25: 25px;
 
     --m-8: 8px;
     --m-10: 10px;
@@ -38,7 +42,7 @@
     --m-20: 20px;
     
     --sz-1: 15px;
-    --sz-2: 18px;
+    --sz-2: 17px;
     --sz-3: 22px;
 
     --fw-500: 500;
@@ -77,7 +81,6 @@
     font-weight: var(--fw-600);
     font-size: var(--sz-1);
     scrollbar-width: thin;
-    scrollbar-color: var(--bg-3) #050505 !important;
     font-family: "Red Hat Display";
     scroll-behavior: smooth;
     scrollbar-width: none;
@@ -88,76 +91,214 @@ body {
     overflow-x: hidden;
 }
 
-.container-home { 
-    display: grid;
-    grid-template-columns: 1fr 50fr 1fr;
+.text-gradient-color {
+    background: linear-gradient(120deg, var(--bg-1), var(--fg-1) 30%, var(--fg-1) 60%, var(--bg-1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+.text-gradient-color-sm {
+    background: linear-gradient(120deg, var(--fg-1) 10%, var(--bg-1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+.text-gradient-color-mm {
+    background: linear-gradient(120deg, var(--fg-1) 80%, var(--bg-1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+.text-gradient-color-ms {
+    background: linear-gradient(120deg, var(--bg-1) 0%, var(--fg-2) 10%,  var(--fg-2) 80%, var(--bg-1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+.container-home {
+    width: 100%; 
     height: 100%;
-    max-width: 1300px;
-    margin: 0 auto;
+    overflow-y: hidden;
     
     .scroll-sec {
-        border-left: var(--border-solid-3);
-        border-right: var(--border-solid-3);
-        display: grid;
-        background-color: var(--bg-1);
+        width: 100%; 
+        height: 100%;
+        max-width: 1300px;
+        margin: 0 auto;
+        padding: 0 var(--p-20);
+    }
+}
+
+.float-line {
+    position: absolute;
+    content: '';
+    top: 90px;
+    border-radius: 50%;
+    width: 700px;
+    height: 700px;
+    z-index: -1;
+    border-top: 5px solid var(--fg-1);
+    border-left: 3px solid var(--fg-1);
+    border-right: 3px solid var(--fg-1);
+    box-shadow: inset 0 0 50px var(--fg-2);
+    -webkit-mask-image: linear-gradient(To bottom, var(--bg-1), transparent 90%);
+    mask-image: linear-gradient(To bottom, var(--bg-1), transparent 90%);
+    z-index: -1;
+}
+
+.float-line-1 {
+    top: 600px;
+    left: -500px;
+    transform: rotate(-130deg);
+}
+
+.float-line-2 {
+    top: 600px;
+    right: -500px;
+    transform: rotate(130deg);
+}
+
+.float-line-3 {
+    top: 1500px;
+    left: -500px;
+    transform: rotate(-130deg);
+}
+
+.float-line-4 {
+    top: 1500px;
+    right: -500px;
+    transform: rotate(130deg);
+}
+
+.skill-color-h1, .skill-color-h2, .skill-color-h3, .skill-color-h4, .skill-color-h5, .skill-color-h6 {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    border: 2px solid var(--br-2);
+    background-color: var(--bg-1);
+    padding: var(--p-20);
+    z-index: 1;
+
+    &::after {
+        position: absolute;
+        content: '';
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('/Noiss.avif');
     }
 
-    .flurry-left {
-        min-width: 40px;
-        max-width: 40px;
-        height: 100%;
-        background-image: url('/Lines.svg');
-        background-size: 100px;
-        border-left: var(--border-solid-3);
-        background-color: var(--bg-1);
-        z-index: 10;
-    }
-    
-    .flurry-right {
-        min-width: 40px;
-        max-width: 40px;
-        height: 100%;
-        background-image: url('/Lines.svg');
-        background-size: 100px;
-        border-right: var(--border-solid-3);
-        background-color: var(--bg-1);
-        z-index: 10;
-    }
+    img {width: 100%; }
+}
+
+.skill-color-h1, .skill-color-h2 {
+    top: 30%;
+    padding: var(--p-15);
+    border-radius: calc(var(--rd-10) + 2px);
+}
+
+.skill-color-h1 {
+    left: 10%;
+    transform: rotate(-5deg);
+    border-top-color: var(--fg-1);
+    border-left-color: var(--fg-1);
+}
+
+.skill-color-h2 {
+    right: 10%;
+    transform: rotate(5deg);
+    border-bottom-color: var(--fg-1);
+    border-right-color: var(--fg-1);
+}
+
+.skill-color-h3, .skill-color-h4 {
+    top: 60%;
+    width: 100px;
+    height: 100px;
+    padding: 13px;
+    border-radius: calc(var(--rd-10) + 3px);
+}
+
+.skill-color-h3 {
+    left: 15%;
+    border-bottom-color: var(--fg-1);
+    border-right-color: var(--fg-1);
+    transform: rotate(-5deg);
+}
+
+.skill-color-h4 {
+    right: 15%;
+    border-top-color: var(--fg-1);
+    border-left-color: var(--fg-1);
+    transform: rotate(5deg);
+}
+
+.skill-color-h5, .skill-color-h6 {
+    top: 15%;
+    width: 70px;
+    height: 70px;
+    padding: 13px;
+    border-radius: calc(var(--rd-10) - 2px);
+}
+
+.skill-color-h5 {
+    left: 25%;
+    transform: rotate(5deg);
+}
+
+.skill-color-h6 {
+    right: 25%;
+    transform: rotate(-5deg);
 }
 
 p { line-height: 1.6; }
 
 .cont-big-button {
-    margin-left: var(--m-10);
-    margin-top: var(--m-20);
-    position: relative;
     display: flex;
     gap: var(--g-10);
-    z-index: 10;
 
-    .link {
-        border-radius: var(--rd-10);
+    .btn-active {
         border: none;
-        display: flex; align-items: center; 
+        display: flex;
+        align-items: center; 
+        justify-content: center;
         gap: var(--g-8);
-        font-weight: 600;
+        font-weight: 700;
         cursor: pointer;
         text-decoration: none;
-        color: var(--fg-1);
-        padding: var(--p-8) var(--p-15);
-        outline: var(--border-solid-3);
-        background: linear-gradient(To bottom, var(--bg-1) 40%, var(--bg-3) 100%);
+        white-space: nowrap;
+        color: var(--bg-1);
+        padding: var(--p-10) var(--p-20);
+        border-radius: var(--rd-6);
+        background: var(--fg-1);   
+        position: relative;
+        
+        &::before {
+            position: absolute;
+            content: '';
+            top: 50%;
+            left: 50%;
+            transform: translateY(-50%) translateX(-50%);
+            width: 200vw;
+            height: calc(100% + 2px);
+            border-top: 1px solid var(--br-1);
+            border-bottom: 1px solid var(--br-1);
+            z-index: -1;
+        }
 
-        & svg { width: 22px; }
+        & svg { 
+            width: 22px;
+            stroke-width: 2px;
+            -webkit-text-stroke-width: 2px;
+        }
 
         &:hover { opacity: 0.8; }
     }
-}
-
-.btn-active {
-    background-image: url('/Lines.svg') !important;
-    background-size: 100px !important;
-    background-color: var(--bg-1) !important;
 }
 
 footer {
@@ -173,9 +314,19 @@ footer {
     }
 }
 
+@media (max-width: 1500px) {
+    .skill-color-h3, .skill-color-h4 { display: none; }
+}
+
 @media (max-width: 1300px) {
-    .flurry-left, .flurry-right {
-        border: none !important;
+    .skill-color-h1, .skill-color-h2 { 
+        width: 70px;
+        height: 70px;
+    }
+
+    .skill-color-h5, .skill-color-h6 { 
+        width: 60px;
+        height: 60px;
     }
 }
 
