--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,108 +2,135 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: calc(100%);
-    padding: var(--p-15);
+    width: 100%;
+    padding: var(--p-10);
     position: sticky;
-    background-color: var(--bg-1);
-    top: 0;
+    top: 10px;
     z-index: 100;
-    
+    position: relative;
+        
     &::before {
         position: absolute;
         content: '';
-        bottom: 0; left: 50%;
+        top: 0;
+        left: 50%;
         transform: translateX(-50%);
         width: 200vw;
+        height: 100%;
+        border-top: 1px solid var(--br-1);
         border-bottom: 1px solid var(--br-1);
     }
     
-    h1 {
-        font-weight: 900;
-        font-size: 30px;
-        color: var(--fg-1);
-    }
-    
-    a, button {
-        display: flex;
-        align-items: center;
+    a {
         text-decoration: none;
-        gap: var(--g-8);
-        color: var(--fg-1);
-        border: none;
-        padding: var(--p-8) var(--p-15);
-        border-radius: var(--rd-10);
-        border: var(--border-solid-3);
-        background: linear-gradient(To bottom, var(--bg-1) 40%, var(--bg-3) 100%);
-        
-        & svg { color: inherit; width: 20px; }
+        color: var(--fg-2);
+        position: relative;
 
         &:hover { opacity: 0.5; }
     }
 
+    .active {
+        border-radius: var(--rd-6);
+        font-weight: 700;
+        color: var(--bg-1);
+        background-color: var(--fg-1);
+        padding: var(--p-8) var(--p-20);
+    }
+
+    .row {
+        display: flex;
+        align-items: center;
+        gap: var(--g-10);
+        
+        h1 {
+            color: var(--fg-1);
+            font-size: 22px;
+            font-weight: 900;
+            text-transform: uppercase;
+        }
+    }
+
+    img { width: 40px; }
+
     .nav-links {
         display: flex;
         align-items: center;
-        gap: var(--g-8);
+        gap: var(--g-20);
     }
 }
 
 header {
     width: 100%;
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    padding: 50px 0;
-    position: relative;
-    border-bottom: var(--border-solid-3);
-    
-    &::before {
-        position: absolute;
-        content: '';
-        top: 0;
-        right: 0;
-        width: 600px;
-        height: 100%;
-        background-image: url('/Cyber.webp');
-        background-size: cover;
-        background-repeat: no-repeat;
-        -webkit-mask-image: linear-gradient(To left, var(--bg-1), transparent);
-        mask-image: linear-gradient(To left, var(--bg-1), transparent);
-        filter: saturate(0);
-    }
+    gap: var(--g-25);
+    padding: 200px 0;
+    padding-bottom: 0;
 
     &::after {
         position: absolute;
         content: '';
-        top: 0;
-        right: 0;
-        width: 600px;
-        height: 100%;
-        background: linear-gradient(-60deg, var(--bg-bl-li-1), transparent);
-        -webkit-mask-image: linear-gradient(To left, var(--bg-1), transparent 80%);
-        mask-image: linear-gradient(To left, var(--bg-1), transparent 80%);
+        top: 90px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 50%;
+        width: 1600px;
+        height: 1600px;
+        z-index: -1;
+        border-top: 5px solid var(--fg-1);
+        border-left: 3px solid var(--fg-1);
+        border-right: 3px solid var(--fg-1);
+        box-shadow: inset 0 20px 50px var(--fg-2);
+        -webkit-mask-image: linear-gradient(To bottom, var(--bg-1), transparent 30%);
+        mask-image: linear-gradient(To bottom, var(--bg-1), transparent 30%);
+        z-index: -1;
     }
 
+    .profile-photo {
+        width: 130px;
+        height: 130px;
+        border: 2px solid var(--fg-1);
+        border-radius: var(--rd-20);
+        position: relative;
+        
+        &::before {
+            position: absolute;
+            content: '';
+            top: 50%;
+            left: 50%;
+            transform: translateY(-50%) translateX(-50%);
+            width: calc(100% + 10px);
+            height: 2000vh;
+            border-left: 1px solid var(--br-1);
+            border-right: 1px solid var(--br-1);
+            z-index: -1;
+        }
+
+        img { 
+            position: absolute;
+            width: 100%;
+            left: 0;
+            bottom: 0;
+        }
+    }
+    
     .title {
         width: 100%;
-        font-size: clamp(60px, 8vw, 80px);
-        color: var(--fg-1);
+        font-size: clamp(40px, 8vw, 70px);
+        text-transform: uppercase;
         line-height: 1.1;
-        letter-spacing: -7px;
-        position: relative;
-        padding: 0 var(--p-10);
-        max-width: 17ch;
-        text-shadow: 3px 3px 10px var(--bg-1);
+        text-align: center;
+        max-width: 25ch;
+        white-space: nowrap;
+        z-index: 10;
     }
 
     .subTitle {
-        color: var(--fg-2);
-        max-width: 90ch;
+        max-width: 60ch;
+        text-align: center;
         font-size: var(--sz-2);
-        padding: 0 var(--p-10);
-        z-index: 10;
-        text-shadow: 3px 3px 5px var(--bg-1);
+        font-weight: 600;
     }
 } 
 
@@ -112,68 +139,41 @@ header {
 .title-section {
     width: 100%;
     display: grid;
+    place-items: center;
     position: relative;
-    padding: 15px 0;
-    margin-top: 80px;
-    border-top: 1px solid var(--br-3);
+    padding: 40px 0;
+    margin-top: 60px;
 
     .title {
-        font-size: clamp(25px, 5vw, 40px);
-        color: var(--fg-1);
-        text-align: left;
-        font-weight: 600;
-        position: relative;
-        padding: 0 var(--p-10) 2px;
-    }
-
-    .subTitle {
-        color: var(--fg-2);
-        font-weight: 600;
-        line-height: 1.5;
-        padding: 0 var(--p-10);
-        font-size: var(--sz-2);
-        max-width: 90ch;
-    }
-
-    .left-span {
-        position: absolute;
-        top: calc(50% - 8px);
-        left: -160px;
-        color: var(--fg-2);
         text-transform: uppercase;
-        font-size: calc(var(--sz-1) - 2px);
-        font-weight: 500;
-        transform: rotate(-90deg);
-        background-color: var(--bg-1);
-        padding: 3px var(--p-10);
-        border-radius: var(--rd-10);
-        border: var(--border-solid-3);
-    }
-}
+        color: var(--fg-1);
+        font-size: clamp(25px, 5vw, 30px);
+        text-align: center;
+        position: relative;
 
-.code-tailwind {
-    font-family: "Consolas";
-    color: var(--fg-3);
-    padding-left: var(--p-10);
-}
-
-@media (max-width: 900px) {
-    header .title {
-        letter-spacing: -5px !important;
-    }
-}
-
-
-@media (max-width: 600px) {
-    nav {
-        .ul-brand { display: none; }
-        .ul-links {
-            width: 100%;
-            a { 
-                width: 100%;
-                display: flex;
-                justify-content: center;
-            }
+        &::before {
+            position: absolute;
+            content: '';
+            top: 50%;
+            left: 50%;
+            transform: translateY(-50%) translateX(-50%);
+            width: 200vw;
+            height: calc(100% + 2px);
+            border-top: 1px solid var(--br-1);
+            border-bottom: 1px solid var(--br-1);
+            z-index: -1;
         }
     }
+    
+    .subTitle {
+        text-transform: uppercase;
+        text-align: center;
+        line-height: 1.8;
+        font-size: var(--sz-2);
+        max-width: 80ch;
+    }
+}
+
+@media (max-width: 800px) {
+    nav { .hide { display: none; } }
 }
