--- a/src/css/general.css
+++ b/src/css/general.css
@@ -122,7 +122,7 @@ body {
 .container-home {
     width: 100%; 
     height: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
     
     .scroll-sec {
         width: 100%; 
@@ -137,7 +137,6 @@ body {
     position: absolute;
     content: '';
     top: 90px;
-    border-radius: 50%;
     width: 700px;
     height: 700px;
     z-index: -1;
@@ -147,30 +146,54 @@ body {
     box-shadow: inset 0 0 50px var(--fg-2);
     -webkit-mask-image: linear-gradient(To bottom, var(--bg-1), transparent 90%);
     mask-image: linear-gradient(To bottom, var(--bg-1), transparent 90%);
-    z-index: -1;
+    z-index: 10;
 }
 
 .float-line-1 {
-    top: 600px;
+    top: 90%;
     left: -500px;
+    transform: rotate(-130deg);
+}
+
+.float-line-1-sm {
+    top: 115%;
+    left: -650px;
     transform: rotate(-130deg);
 }
 
 .float-line-2 {
-    top: 600px;
+    top: 90%;
     right: -500px;
     transform: rotate(130deg);
 }
 
+.float-line-2-sm {
+    top: 115%;
+    right: -650px;
+    transform: rotate(130deg);
+}
+
 .float-line-3 {
-    top: 1500px;
+    top: 180%;
     left: -500px;
     transform: rotate(-130deg);
 }
 
+.float-line-3-sm {
+    top: 205%;
+    left: -650px;
+    transform: rotate(-130deg);
+}
+
 .float-line-4 {
-    top: 1500px;
+    top: 180%;
     right: -500px;
+    transform: rotate(130deg);
+}
+
+.float-line-4-sm {
+    top: 205%;
+    right: -650px;
     transform: rotate(130deg);
 }
 
@@ -178,9 +201,9 @@ body {
     position: absolute;
     width: 80px;
     height: 80px;
-    border: 2px solid var(--br-2);
-    background-color: var(--bg-1);
+    border: 2px solid var(--fg-1);
     padding: var(--p-20);
+    border-radius: var(--rd-10);
     z-index: 1;
 
     &::after {
@@ -198,43 +221,33 @@ body {
 
 .skill-color-h1, .skill-color-h2 {
     top: 30%;
-    padding: var(--p-15);
-    border-radius: calc(var(--rd-10) + 2px);
+    padding: var(--p-10);
 }
 
 .skill-color-h1 {
     left: 10%;
     transform: rotate(-5deg);
-    border-top-color: var(--fg-1);
-    border-left-color: var(--fg-1);
 }
 
 .skill-color-h2 {
     right: 10%;
     transform: rotate(5deg);
-    border-bottom-color: var(--fg-1);
-    border-right-color: var(--fg-1);
 }
 
 .skill-color-h3, .skill-color-h4 {
     top: 60%;
-    width: 100px;
-    height: 100px;
-    padding: 13px;
-    border-radius: calc(var(--rd-10) + 3px);
+    width: 80px;
+    height: 80px;
+    padding: var(--p-15);
 }
 
 .skill-color-h3 {
     left: 15%;
-    border-bottom-color: var(--fg-1);
-    border-right-color: var(--fg-1);
     transform: rotate(-5deg);
 }
 
 .skill-color-h4 {
     right: 15%;
-    border-top-color: var(--fg-1);
-    border-left-color: var(--fg-1);
     transform: rotate(5deg);
 }
 
@@ -242,8 +255,7 @@ body {
     top: 15%;
     width: 70px;
     height: 70px;
-    padding: 13px;
-    border-radius: calc(var(--rd-10) - 2px);
+    padding: var(--p-15);
 }
 
 .skill-color-h5 {
@@ -301,18 +313,7 @@ p { line-height: 1.6; }
     }
 }
 
-footer {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    height: 70px;
-    padding: var(--p-20);
-    
-    h3 {
-        color: var(--fg-1);
-    }
-}
+footer { height: 70px; }
 
 @media (max-width: 1500px) {
     .skill-color-h3, .skill-color-h4 { display: none; }
