--- a/src/css/home.css
+++ b/src/css/home.css
@@ -71,19 +71,17 @@ header {
     &::after {
         position: absolute;
         content: '';
-        top: 90px;
+        top: 345px;
         left: 50%;
-        transform: translateX(-50%);
-        border-radius: 50%;
-        width: 1600px;
-        height: 1600px;
+        transform: translateX(-50%) rotate(45deg);
+        width: 1300px;
+        height: 1300px;
         z-index: -1;
         border-top: 5px solid var(--fg-1);
-        border-left: 3px solid var(--fg-1);
-        border-right: 3px solid var(--fg-1);
+        border-left: 5px solid var(--fg-1);
         box-shadow: inset 0 20px 50px var(--fg-2);
-        -webkit-mask-image: linear-gradient(To bottom, var(--bg-1), transparent 30%);
-        mask-image: linear-gradient(To bottom, var(--bg-1), transparent 30%);
+        -webkit-mask-image: linear-gradient(135deg, var(--bg-1), transparent 30%);
+        mask-image: linear-gradient(135deg, var(--bg-1), transparent 30%);
         z-index: -1;
     }
 
