--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -1,43 +1,3 @@
-.skill-sec {
-    width: 100%;
-    height: 350px;
-    display: grid;
-    place-items: center;
-    gap: var(--g-10);
-    padding: 80px 0;
-    overflow: hidden;
-    position: relative;
-    border-top: var(--border-solid-1);
-    border-bottom: var(--border-solid-1);
-
-    &::before {
-        position: absolute;
-        content: '';
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 100%;
-        height: 100%;
-        background-image: url('/6.webp');
-        background-size: 100%;
-        -webkit-mask-image: linear-gradient(To top, var(--bg-1), transparent);
-        mask-image: linear-gradient(To top, var(--bg-1), transparent);
-    }
-
-    &::after {
-        position: absolute;
-        content: '';
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 100%;
-        height: 100%;
-        background: var(--bg-bl-li-1);
-        -webkit-mask-image: linear-gradient(To top, var(--bg-1), transparent 80%);
-        mask-image: linear-gradient(To top, var(--bg-1), transparent 80%);
-    }
-}
-
 .experience, .service, .projects, .contact-sec {
     display: grid;
     position: relative;
@@ -47,20 +7,22 @@
 }
 
 .experience { grid-template-columns: repeat(2, 1fr); }
-
-.service, .projects {
-    grid-template-columns: repeat(3, 1fr);
-}
+.service, .projects { grid-template-columns: repeat(2, 1fr); }
 
 .contact-sec {
+    display: grid;
+    place-items: center;
+
     form {
         width: 100%;
-        display: flex;
-        align-items: center;
+        max-width: 800px;
+        display: grid;
+        place-items: center;
         flex-wrap: nowrap;
         gap: var(--g-10);
         
         .cont-name {
+            width: 100%;
             display: flex;
             align-items: center;
             border-radius: var(--rd-10);
@@ -81,6 +43,7 @@
         }
 
         input, textarea {
+            width: 100%;
             padding: 0 var(--p-15);
             height: 40px;
             font-weight: inherit;
@@ -95,7 +58,6 @@
         }
 
         textarea {
-            width: 100%;
             padding: var(--p-8) var(--p-15);
             resize: none;
         }
@@ -134,9 +96,6 @@
 
 @media (max-width: 700px) {
     form {
-        display: flex !important;
-        flex-wrap: wrap !important;
-
         .cont-name { 
             width: 100%;
             input { width: 100%; }
